# SIGMA

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  template.xml
backend/: Cargo.toml  Dockerfile
backend/src/: Cargo.toml  main.rs
backend/src/middleware/: auth.rs
backend/src/routes/: auth.rs  decrypt.rs  encrypt.rs  error.rs  key_import.rs  keys.rs  mod.rs  sign.rs  verify.rs
frontend/: Dockerfile  Sign.elm  elm.json
frontend/src/: Main.elm
frontend/src/Pages/: Decrypt.elm  Encrypt.elm  Keys.elm  Sign.elm  Verify.elm
