[package]
name = "sigma-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sequoia-openpgp = "1.15"
thiserror = "1.0"
dotenv = "0.15"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
