[package]
name = "sigma-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sequoia-openpgp = "1.16"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
